[tool.poetry]
name = "cinlist"
version = "0.1.0"
description = ""
authors = ["Akshay <akshayitzme.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
Django = "4.1.13"
gunicorn = "23.0.0"
sqlparse = "0.5.0"
whitenoise = "6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
